--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -6,10 +6,8 @@ on:
       - 'main'
 
 jobs:
-  version:
-
+  docker:
     runs-on: ubuntu-latest
-
     steps:
 
       - uses: actions/checkout@v2
@@ -24,13 +22,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build docker image
-        run: docker build -t docstring-auditor .
+        run: DOCKER_BUILDKIT=1 docker build --progress=plain -t ghcr.io/${GITHUB_REPOSITORY}/${GITHUB_REF##*/} .
 
-      - name: Rename base image tag for release
-        run: docker tag docstring-auditor ghcr.io/rob-luke/docstring-auditor:main
-
-      - name: List docker images
-        run: docker images
+      - name: Tag image
+        run: docker tag ghcr.io/${GITHUB_REPOSITORY}/${GITHUB_REF##*/} ghcr.io/rob-luke/docstring-auditor:latest
 
       - name: Push image to github
-        run: docker push ghcr.io/rob-luke/docstring-auditor:main
+        run: docker push ghcr.io/rob-luke/docstring-auditor:latest
