--- a/.github/workflows/image-release.yml
+++ b/.github/workflows/image-release.yml
@@ -21,6 +21,9 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_TOKEN }}
 
+      - name: Create environmental variable for release version
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
       - name: Build docker image
         run: DOCKER_BUILDKIT=1 docker build --progress=plain -t ghcr.io/${GITHUB_REPOSITORY}/${GITHUB_REF##*/} .
 
@@ -28,4 +31,4 @@ jobs:
         run: docker tag ghcr.io/${GITHUB_REPOSITORY}/${GITHUB_REF##*/} ghcr.io/rob-luke/docstring-auditor:${{ env.RELEASE_VERSION }}
 
       - name: Push image to github
-        run: docker push ghcr.io/rob-luke/docstring-auditor:latest
+        run: docker push ghcr.io/rob-luke/docstring-auditor:${{ env.RELEASE_VERSION }}
