--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,5 +46,5 @@ jobs:
     - name: Run format checking
       run: hatch run dev:lint-format
 
-#    - name: Run self test
-#      run: hatch run docstring-auditor
+    - name: Run self test
+      run: hatch run docstring-auditor
