--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: ['3.10']
+    env:
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
     steps:
     - uses: actions/checkout@v3
@@ -43,3 +45,6 @@ jobs:
 
     - name: Run format checking
       run: hatch run dev:lint-format
+
+    - name: Run self test
+      run: hatch run docstring-auditor
