--- a/.github/workflows/image-test.yml
+++ b/.github/workflows/image-test.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Test Docker image
       run: |
         echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" > .env
-        docker run --rm -it --env-file .env my-docker-image:latest docstring_auditor/main.py
+        docker run --rm -i --env-file .env my-docker-image:latest docstring_auditor/main.py
