--- a/.github/workflows/image-test.yml
+++ b/.github/workflows/image-test.yml
@@ -26,6 +26,7 @@ jobs:
         file: ./Dockerfile
         push: false
         tags: my-docker-image:test
+        load: true
 
     - name: Test Docker image
       run: |
