--- a/.github/workflows/image-test.yml
+++ b/.github/workflows/image-test.yml
@@ -28,7 +28,11 @@ jobs:
         tags: my-docker-image:test
         load: true
 
+    - name: Where am i
+      run: |
+        pwd
+
     - name: Test Docker image
       run: |
         echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" > .env
-        docker run --rm -i --env-file .env -v ./:/repo my-docker-image:test docstring_auditor/main.py
+        docker run --rm -i --env-file .env -v $(pwd):/repo my-docker-image:test docstring_auditor/main.py
