--- a/action.yml
+++ b/action.yml
@@ -16,8 +16,38 @@ inputs:
     required: true
 
 runs:
-  using: "docker"
-  image: "docker://ghcr.io/agencyenterprise/docstring-auditor:latest"
-  args:
-    - ${{ inputs.path }}
-    - ${{ inputs.openaiApiKey }}
+  using: "composite"
+  name: Workplace Action
+
+  runs-on: ${{ matrix.os }}
+  strategy:
+    fail-fast: false
+    matrix:
+      os: [ubuntu-latest]
+      python-version: ['3.11']
+  env:
+    OPENAI_API_KEY: ${{ input.openaiApiKey }}
+
+  steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install Hatch
+      run: pip install --upgrade hatch
+
+    - name: pwd
+      run: |
+        pwd
+
+    - name: ls
+      run: |
+        ls
+
+    - name: Execute
+      run: hatch run docstring-auditor ${{ input.path }}
