--- a/.github/workflows/test-workplace-action.yml
+++ b/.github/workflows/test-workplace-action.yml
@@ -26,7 +26,7 @@ jobs:
           ls
 
       - name: Docstring Auditor
-        uses: agencyenterprise/docstring-auditor@v0.1.11
+        uses: agencyenterprise/docstring-auditor@main
         with:
           openaiApiKey: ${{ secrets.OPENAI_API_KEY }}
           path: docstring_auditor
