--- a/action.yml
+++ b/action.yml
@@ -45,4 +45,4 @@ runs:
       shell: bash
       run: hatch run docstring-auditor ${{ inputs.path }}
       env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        OPENAI_API_KEY: ${{ inputs.openaiApiKey }}
