--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,4 +48,4 @@ jobs:
 
     - name: Run self test
       if : ${{ matrix.python-version == '3.11' }}
-      run: hatch run docstring-auditor --code_block_name extract_code_block
+      run: hatch run docstring-auditor --code_block_name docstring_auditor
