--- a/.github/workflows/test-workplace-action.yml
+++ b/.github/workflows/test-workplace-action.yml
@@ -30,3 +30,4 @@ jobs:
         with:
           openaiApiKey: ${{ secrets.OPENAI_API_KEY }}
           path: .
+          code-block-name: docstring_auditor
