--- a/.github/workflows/suggester-workflow.yml
+++ b/.github/workflows/suggester-workflow.yml
@@ -32,6 +32,32 @@ jobs:
           ignore-dirs: tests
           auto-fix: true
 
+      - name: ls
+        run: |
+          ls
+
+      - name: git status
+        run: |
+          git status
+
+      - name: git diff
+        run: |
+          git diff
+          
+      - uses: reviewdog/action-setup@v1
+        with:
+          reviewdog_version: latest
+
+      - name: reviewdog
+        env:
+            REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          TMPFILE=$(mktemp)
+          git diff >"${TMPFILE}"
+          git stash -u && git stash drop
+          reviewdog -f=diff -f.diff.strip=1 -reporter=github-pr-review < "${TMPFILE}"
+        
+          
       - name: suggester
         uses: reviewdog/action-suggester@v1
         with:
