--- a/.github/workflows/suggester-workflow.yml
+++ b/.github/workflows/suggester-workflow.yml
@@ -43,22 +43,8 @@ jobs:
       - name: git diff
         run: |
           git diff
-          
-      - uses: reviewdog/action-setup@v1
-        with:
-          reviewdog_version: latest
 
-      - name: reviewdog
-        env:
-            REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          TMPFILE=$(mktemp)
-          git diff >"${TMPFILE}"
-          git stash -u && git stash drop
-          reviewdog -f=diff -f.diff.strip=1 -reporter=github-pr-review < "${TMPFILE}"
-        
-          
-      - name: suggester
-        uses: reviewdog/action-suggester@v1
+      - name: Comment Suggestions 🗒️
+        uses: getsentry/action-git-diff-suggestions@main
         with:
-          tool_name: docstring-auditor
+          message: Docstring Auditor Suggestion
